network1/network1.tf
# Create VPC
resource "aws_vpc" "mainvpc" {
  cidr_block = "${var.vpc_cidr}"

  tags = {
    Project = "devops-task"
    Name = "Demo VPC"
 }
}



# Create Public Subnet1
resource "aws_subnet" "pub_sub1" {  
vpc_id                  = "${aws_vpc.mainvpc.id}"  
cidr_block              = var.pub_sub1_cidr_block  
availability_zone       = "us-east-1a"
map_public_ip_on_launch = true  
tags = {    
         Project = "demo-assignment"   
         Name = "public_subnet1"
      }
} 


# Create Public Subnet2 
resource "aws_subnet" "pub_sub2" {  
vpc_id                  = "${aws_vpc.mainvpc.id}" 
cidr_block              = var.pub_sub2_cidr_block  
availability_zone       = "us-east-1b" 
map_public_ip_on_launch = true  
tags = {    
         Project = "demo-assignment" 
         Name = "public_subnet2"  

}
}



# Create Private Subnet1
resource "aws_subnet" "prv_sub1" {
  vpc_id                  = "${aws_vpc.mainvpc.id}"
  cidr_block              = var.prv_sub1_cidr_block
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = false
tags = {
    Project = "demo-assignment"
    Name = "private_subnet1" 
 }
}


# Create Private Subnet2
resource "aws_subnet" "prv_sub2" {
  vpc_id                  = "${aws_vpc.mainvpc.id}"
  cidr_block              = var.prv_sub2_cidr_block
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = false
tags = {
    Project = "demo-assignment"
    Name = "private_subnet2"
  }
}



# Create Public Route Table
resource "aws_route_table" "pub_sub1_rt" {
  vpc_id = "${aws_vpc.mainvpc.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
   }
    tags = {
    Project = "demo-assignment"
    Name = "public subnet route table" 
 }
}
# Create route table association of public subnet1
resource "aws_route_table_association" "internet_for_pub_sub1" {
  route_table_id = aws_route_table.pub_sub1_rt.id
  subnet_id      = aws_subnet.pub_sub1.id
}
# Create route table association of public subnet2
resource "aws_route_table_association" "internet_for_pub_sub2" {
  route_table_id = aws_route_table.pub_sub1_rt.id
  subnet_id      = aws_subnet.pub_sub2.id
}

# Create Internet Gateway 
resource "aws_internet_gateway" "igw" {  
   vpc_id = "${aws_vpc.mainvpc.id}"   
   tags = {    
            Project = "devops-task"   
            Name = "internet gateway"
          }
}

# Create EIP for NAT GW1  
resource "aws_eip" "eip_natgw1" {  
     count = "1"
} 
# Create NAT gateway1
resource "aws_nat_gateway" "natgateway_1" {  
     count         = "1"  
     allocation_id = aws_eip.eip_natgw1[count.index].id  
     subnet_id     = aws_subnet.pub_sub1.id
} 

# Create EIP for NAT GW2 
resource "aws_eip" "eip_natgw2" { 
     count = "1"
} 
# Create NAT gateway2 
resource "aws_nat_gateway" "natgateway_2" {               
     count    = "1"  
     allocation_id = aws_eip.eip_natgw2[count.index].id 
     subnet_id     = aws_subnet.pub_sub2.id
}

# Create private route table for prv sub1
resource "aws_route_table" "prv_sub1_rt" {
  count  = "1"
  vpc_id = "${aws_vpc.mainvpc.id}"
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.natgateway_1[count.index].id
  }
  tags = {
    Project = "demo-assignment"
    Name = "private subnet1 route table" 
 }
}
# Create route table association betn prv sub1 & NAT GW1
resource "aws_route_table_association" "pri_sub1_to_natgw1" {
  count          = "1"
  route_table_id = aws_route_table.prv_sub1_rt[count.index].id
  subnet_id      = aws_subnet.prv_sub1.id
}
# Create private route table for prv sub2
resource "aws_route_table" "prv_sub2_rt" {
  count  = "1"
  vpc_id = "${aws_vpc.mainvpc.id}"
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.natgateway_2[count.index].id
  }
  tags = {
    Project = "demo-assignment"
    Name = "private subnet2 route table"
  }
}
# Create route table association betn prv sub2 & NAT GW2
resource "aws_route_table_association" "pri_sub2_to_natgw1" {
  count          = "1"
  route_table_id = aws_route_table.prv_sub2_rt[count.index].id
  subnet_id      = aws_subnet.prv_sub2.id
}
